--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -10,9 +12,12 @@
     "@types/node": "^12.20.15",
     "@types/react": "^17.0.10",
     "@types/react-dom": "^17.0.7",
+    "@types/styled-components": "^5.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.16.1",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2"
   },
